fix foot config

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -18,14 +18,11 @@ multiplier=3.0
 
 # darker-black 131313
 
-# Mutocarbon
-[cursor]
-color=161616 e2e6e7
-
 [colors]
 alpha=0.65
 foreground=e2e6e7 #base06 white
 background=161616 #base01 black
+cursor=161616 e2e6e7
 
 #regular
 regular0=272C38       #         black
@@ -48,14 +45,13 @@ bright6=2CD6D1       #         cyan
 bright7=fefefe       #        white
 
 # bright1=FF74B8       #       magenta
-#
+
 # Catppucin
-[cursor]
-color=11111b f5e0dc
 
 [colors]
 foreground=cdd6f4
 background=1e1e2e
+cursor=11111b f5e0dc
 
 regular0=45475a
 regular1=f38ba8
