Edit foot config
add `alpha` for non transparent.

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,48 +9,12 @@ pad=1x1
 lines=10000
 multiplier=3.0
 
-# yellow-base f2c55c
-# yellow-bright FFD31F
-# yellow-brightest  ffe443
-
-# purple-pale #C693FF
-# purple #E17FFF
-
-# darker-black 131313
-
-[colors]
-alpha=0.65
-foreground=e2e6e7 #base06 white
-background=161616 #base01 black
-cursor=161616 e2e6e7
-
-#regular
-regular0=272C38       #         black
-regular1=FF9797       #           red
-regular2=83D47A       #         green
-regular3=D9C052       #        yellow
-regular4=96C4FF       #          blue
-regular5=FFA6D2       #      magenta
-regular6=79CFCD       #          cyan
-regular7=DFE3E4       #         white
-
-#bright
-bright0=656565       #        black
-bright1=FF6969       #          red
-bright2=64CB59       #        green
-bright3=EED252       #       yellow
-bright4=5BA3FF       #         blue
-bright5=FF6EB5       #       magenta
-bright6=2CD6D1       #         cyan
-bright7=fefefe       #        white
-
-# bright1=FF74B8       #       magenta
-
-# Catppucin
+# Catppuccin
 
 [colors]
 foreground=cdd6f4
 background=1e1e2e
+alpha=1.0
 cursor=11111b f5e0dc
 
 regular0=45475a
