--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,10 @@
 # For Yazi (https://yazi-rs.github.io/docs/image-preview/#tmux)
-set -g allow-passthrough on
-set -ga update-environment TERM
-set -ga update-environment TERM_PROGRAM
+# set -g allow-passthrough on
+# set -ga update-environment TERM
+# set -ga update-environment TERM_PROGRAM
+
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 set-option -g prefix C-a
 unbind C-b
