--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,7 +3,10 @@
 # set -ga update-environment TERM
 # set -ga update-environment TERM_PROGRAM
 
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+# set -ag terminal-overrides ",xterm-256color:RGB"
+
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 set-option -g prefix C-a
