--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
 # For Yazi (https://yazi-rs.github.io/docs/image-preview/#tmux)
-# set -g allow-passthrough on
 # set -ga update-environment TERM
 # set -ga update-environment TERM_PROGRAM
 
@@ -28,12 +27,15 @@ bind \\ split-window -h -c "#{pane_current_path}"
 bind & kill-window
 bind x kill-pane
 
+bind [ copy-mode
+
+setw -g mode-keys vi
+set -g allow-passthrough on
+set-option -g set-clipboard on
 set-option -s focus-events on
 set-option -s extended-keys on
-set-option -s escape-time 0
-
 set-option -g status-position top
-
+set-option -sg escape-time 0
 
 rosewater="#f4dbd6"
 flamingo="#f0c6c6"
