--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,5 +1,5 @@
 [main]
-font = MonaSpiceNe Nerd FontMono:size=12
+font = MonaSpiceNe Nerd FontMono:size=12, TF Srivichai:size=16
 dpi-aware=yes
 
 [main]
